--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,5 @@ package: GoExcercise
 import:
 - package: github.com/gorilla/mux
   version: ~1.6.2
+- package: github.com/olivere/elastic
+  version: ~6.2.15
